tests/e2e/semantics/head_const_output11.error
Error: syntax error in story at line 3, column 9

3|            res["body"] = 2
              ^^^^^^^^^^

E0104: `Object` can't be indexed with `body` of type `string`
